--- a/style.css
+++ b/style.css
@@ -1,30 +1,72 @@
 * {
-  margin: 10;
-  padding: 10;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
-
 
 :root {
-    --texto: #E0E0E0
+  --texto: #E0E0E0;
 }
-
-.profile {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    float: left;
-    margin-right: 30px;
-}
-
-.texto-centralizado {
-  height: 150px; 
-  display: table-cell;
-  vertical-align: middle;
-}
-
 
 body {
-    font-family: "Roboto"
+  background-color: #121212;
+  color: var(--texto);
+  padding: 20px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 40px;
+}
+
+.header img.profile {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+}
+
+.header h1 {
+  font-size: 28px;
+}
+
+
+.musica-lista{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.cartao {
+  background-color: #1e1e1e;
+  border-radius: 12px;
+  padding: 20px;
+  width: 250px;
+  text-align: center;
+}
+
+.cartao:hover {
+  font-size: 1.3rem;;
+}
+
+.cartao h3 {
+  margin-top: 15px;
+  margin-bottom: 8px;
+  color: #fff;
+}
+
+.cartao p {
+  margin: 0;
+  font-size: 14px;
+  color: #bbb;
+}
+
+.cartao .BB {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid #555;
 }
