--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   margin-bottom: 40px;
 }
 
-.header img.profile {
+.header img.vinil {
   width: 60px;
   height: 60px;
   border-radius: 50%;
@@ -49,7 +49,7 @@ body {
 }
 
 .cartao:hover {
-  font-size: 1.3rem;;
+  transform: scale(1.05);
 }
 
 .cartao h3 {
@@ -65,6 +65,20 @@ body {
 }
 
 .cartao .BB {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid #555;
+}
+
+.cartao .guns {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  border: 2px solid #555;
+}
+
+.cartao .nirvana {
   width: 100%;
   height: auto;
   border-radius: 10px;
