--- a/style.css
+++ b/style.css
@@ -30,10 +30,18 @@ body {
   border-radius: 50%;
 }
 
-.header h1 {
-  font-size: 28px;
+nav {
+  text-align: center;
 }
 
+nav ul {
+  display: flex;
+  justify-content: center; 
+  gap: 30px; 
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
 
 .musica-lista {
   display: flex;
@@ -98,7 +106,7 @@ body {
 .spotify {
   cursor: pointer;
   background-color: green;
-  display: flex;
+  display: inline-flex;;
   align-items: center;
   gap: 6px;
   padding: 4px 6px;
@@ -118,4 +126,30 @@ footer p {
   font-size: 0.9rem;
   color: var(--texto);
   padding: 1rem;
+}
+
+.sugestao {
+  padding: 20px;
+  max-width: 500px;
+  margin: 40px auto;
+  border-radius: 8px;
+  color: var(--texto);
+}
+
+.sugestao h2 {
+  color: var(--texto);
+  margin-bottom: 16px;
+  text-align: center;
+}
+
+.sugestao form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+.sugestao fieldset {
+  border: none;
+  display: flex;
+  flex-direction: column;
 }
